--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.9.1",
     "tsparticles-engine": "^2.12.0",
     "tsparticles-slim": "^2.12.0",
     "web-vitals": "^2.1.4"
